<resources>
    <string name="app_name">StackThis</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stack">StackActivity</string>
    <string name="title_activity_queue">QueueActivity</string>
    <string name="stack">Stack</string>
    <string name="list">Queue</string>
    <string name="list_search">List Search</string>
    <string name="pop">Pop</string>
    <string name="top">Top</string>
    <string name="push">Push</string>
    <string name="enqueue">Enqueue</string>
    <string name="dequeue">Dequeue</string>
    <string name="clear">Clear</string>
    <string name="enterVal">Enter a Value</string>
    <string name="head">Head</string>
    <string name="tail">Tail</string>
    <string name="search">Search</string>
    <string name="slow_search">Slow Search</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_list_search">ListSearchActivity</string>
    <string name="result">Result</string>
    <string name="autofill">Autofill</string>
    <string name="searching">Searching</string>
    <string name="index">Index</string>

</resources>
