<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListSearchActivity"
    android:id="@+id/coordinatorLayout4">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_dark"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="411dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/listSearchToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary_dark"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:layout_conversion_absoluteHeight="56dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/content_list_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_conversion_absoluteHeight="675dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/searchingEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/searchingTextView"
        app:layout_constraintStart_toStartOf="@+id/searchingTextView"
        app:layout_constraintTop_toBottomOf="@+id/searchingTextView" />

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultEditText"
        tools:layout_conversion_absoluteHeight="731dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enterVal"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/design_default_color_primary_dark"
        android:onClick="search"
        android:text="@string/search"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchEditText" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/result"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/autofillBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/resultTextView"
        app:layout_constraintStart_toStartOf="@+id/resultTextView"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <Button
        android:id="@+id/autofillBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/design_default_color_primary_dark"
        android:onClick="autofill"
        android:text="@string/autofill"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/searchBtn"
        app:layout_constraintStart_toStartOf="@+id/searchBtn"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn" />

    <TextView
        android:id="@+id/searchingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/searching"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultTextView"
        app:layout_constraintEnd_toStartOf="@+id/resultTextView"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>